--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,8 @@ spring.jpa.show-sql=true
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
+logging.level.org.thymeleaf=DEBUG
+logging.level.org.thymeleaf.spring5=DEBUG
 
