--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.thymeleaf.cache=false
 logging.level.org.thymeleaf=DEBUG
 logging.level.org.thymeleaf.spring5=DEBUG
 
+spring.servlet.multipart.max-file-size=4MB
+spring.servlet.multipart.max-request-size=4MB
