--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
-logging.level.org.thymeleaf=DEBUG
-logging.level.org.thymeleaf.spring5=DEBUG
+logging.level.org.thymeleaf=INFO
+logging.level.org.thymeleaf.spring5=INFO
 
-spring.servlet.multipart.max-file-size=4MB
-spring.servlet.multipart.max-request-size=4MB
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
