--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ logging.level.org.thymeleaf.spring5=INFO
 
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+
+spring.security.user.name=zoetlam
+spring.security.user.password=test
